--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ dependencies {
 
     // video thumbnail
     implementation 'org.jcodec:jcodec-javase:0.2.5'
+
+    // PPT thumbnail
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation 'org.apache.poi:poi-scratchpad:5.2.3'
 }
 
 tasks.named('test') {
